kube_yml/apache-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-web-app
  annotations:
    kubernetes.io/change-cause: apache
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: web-app
  replicas: 2
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: apache-php
