kube_yml/service-web-app.yml
apiVersion: v1
kind: Service
metadata:
  name: service-web-app
spec:
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 10.96.0.5
  type: LoadBalancer
