kube_yml/ingress-web-app.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: jidelnicek.info
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: deploy-web-app
              port:
                number: 8080
